--- a/stress/Dockerfile
+++ b/stress/Dockerfile
@@ -1,3 +1,3 @@
 FROM registry.access.redhat.com/rhscl/httpd-24-rhel7
 
-CMD ab -dSrk -c 20 -n 50000000 http://http://scale-119203008-scale.apps.ap46a.prod.ole.redhat.com/index.php
+CMD ab -dSrk -c 20 -n 50000000 http://scale-119203008-scale.apps.ap46a.prod.ole.redhat.com/index.php
